# money-api

./: .env.example  .gitignore  README.md  dev.bat  dev.sh  pyproject.toml  test_hash.py
.github/: CODEOWNERS
web_app/: database.py  dependencies.py  main.py  models.py
web_app/routes/: accounts.py  admin.py  auth.py  records.py  reminders.py  root.py  transfers.py  users.py
web_app/schemas/: accounts.py  add.py  forgot_password.py  member.py
web_app/static/: test.html
web_app/templates/: test.jinja
web_app/utils/: email_utils.py  jwt.py  otp.py  password.py
