[project]
name = "money-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.127.0",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
